Improve MainNav and banner-strip, Add banner-folha

--- a/pages/index.html
+++ b/pages/index.html
@@ -104,10 +104,10 @@
                 </small>
             </a>
 
-            <a href="#" class="btn-cprimary d-block mr-3">
+            <a href="#" class="btn-cprimary py-1 d-block mr-3">
                 Solicitar a destinação
             </a>
-            <a href="#" class="btn-csecondary d-block ">
+            <a href="#" class="btn-csecondary py-1 d-block ">
                 Área restrita
             </a>
         </div>
@@ -177,10 +177,10 @@
                     </small>
                 </a>
 
-                <a href="#" class="btn-cprimary d-block mb-2">
+                <a href="#" class="btn-cprimary py-1 d-block mb-2">
                     Solicitar a destinação
                 </a>
-                <a href="#" class="btn-cdark d-block ">
+                <a href="#" class="btn-cdark py-1 d-block ">
                     Área restrita
                 </a>
             </ul>
@@ -203,7 +203,7 @@
                 </div>
             </section>
 
-            <section id="banner-strip" class="banner-strip">
+            <section id="banner-strip" class="banner-strip wow fadeIn">
                 <div class="banner-strip__img">
                     <img
                         src="../images/backgrounds/bg-associacao.png"
@@ -211,15 +211,15 @@
                 </div>
                 <div class="banner-strip__caption">
                     <h3 class="inner-title">Quero me associar</h3>
-                    <a href="#" class="btn-white-outline">Clique aqui</a>
+                    <a href="#" class="btn-outline-white">Clique aqui</a>
                 </div>
             </section>
 
             <section id="banner-folha" class="banner-folha">
                 <div class="container">
                     <div class="row">
-                        <div class="col-lg-5">
-                            <div class="banner-folha__caption">
+                        <div class="col-lg-6">
+                            <div class="banner-folha__caption wow fadeInUp">
                                 <h3 class="inner-title">O iber</h3>
                                 <div class="inner-desc">
                                     <p>
@@ -232,11 +232,11 @@
                                         empresas na Política Nacional de Resíduos Sólidos (PNRS).
                                     </p>
                                 </div>
-                                <a href="#" class="btn-primary">Saiba mais</a>
+                                <a href="#" class="btn-cprimary">Saiba mais</a>
                             </div>
                         </div>
-                        <div class="banner-folha__bg"></div>
                     </div>
+                    <img class="banner-folha__bg wow fadeInRight" src="../images/backgrounds/banner-about.png"/>
                 </div>
             </section>
 
