Add new sections

--- a/pages/index.html
+++ b/pages/index.html
@@ -139,7 +139,8 @@
                 class="main-nav__close"
                 aria-expanded="false"
                 data-toggle="nav">
-                <i class="fa fa-times"></i>
+                <div></div>
+                <div></div>
             </button>
 
             <ul class="main-nav__links mb-4 mb-lg-0">
@@ -236,30 +237,32 @@
                             </div>
                         </div>
                     </div>
-                    <img class="banner-folha__bg wow fadeInRight" src="../images/backgrounds/banner-about.png"/>
+                    <img
+                        class="banner-folha__bg wow fadeInRight"
+                        src="../images/backgrounds/banner-about.png"/>
                 </div>
             </section>
 
             <section id="conheca-steps" class="conheca">
                 <div class="container">
-                    <div class="conheca-steps__header">
-                        <h3 class="inner-title">
-                            Conheças as empresas em destaque
+                    <div class="conheca__header">
+                        <h3 class="inner-title wow fadeInUp">
+                            Conheça as empresas em destaque
                         </h3>
-                        <p class="inner-desc">
+                        <p class="inner-desc  wow fadeInUp" data-wow-delay="0.2s">
                             Somos centenas de associados, de todos os portes, fazendo a diferença no
                             sistemade logística reversa do país.
                         </p>
                     </div>
 
                     <div class="row">
-                        <div class="col-lg-3">
-                            <div class="conheca__item">
+                        <div class="col-md-3 d-flex justify-content-center">
+                            <div class="conheca__item wow fadeInUp">
                                 <div class="conheca__item-icon">
                                     <img src="../images/ico/comerciante.png" alt="">
                                 </div>
                                 <h5 class="conheca__item-title">
-                                    Comerciante/Consumidor PJ
+                                    Comerciante/<br/>Consumidor PJ
                                 </h5>
 
                                 <div class="conheca__item-battery">
@@ -268,8 +271,8 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-lg-3">
-                            <div class="conheca__item">
+                        <div class="col-md-3 d-flex justify-content-center">
+                            <div class="conheca__item wow fadeInUp">
                                 <div class="conheca__item-icon">
                                     <img src="../images/ico/distruibudor.png" alt="">
                                 </div>
@@ -283,8 +286,8 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-lg-3">
-                            <div class="conheca__item">
+                        <div class="col-md-3 d-flex justify-content-center">
+                            <div class="conheca__item wow fadeInUp">
                                 <div class="conheca__item-icon">
                                     <img src="../images/ico/fabricante.png" alt="">
                                 </div>
@@ -298,8 +301,8 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-lg-3">
-                            <div class="conheca__item">
+                        <div class="col-md-3 d-flex justify-content-center">
+                            <div class="conheca__item wow fadeInUp">
                                 <div class="conheca__item-icon">
                                     <img src="../images/ico/reciclador.png" alt="">
                                 </div>
@@ -310,45 +313,129 @@
                         </div>
                     </div>
 
-                    <h4 class="conheca__carousel-title">
+                    <h4 class="conheca__carousel-title wow fadeInUp">
                         Associados e parceiros
                     </h4>
-                    <div class="conheca__carousel owl-carousel owl-default">
+                    <div class="conheca__carousel owl-carousel owl-default wow fadeInUp">
+                        <div class="conheca__carousel-item">
+                            <a href="#">
+                                <img src="../images/brands/fecomercio.png" alt="">
+                            </a>
+                        </div>
+                        <div class="conheca__carousel-item">
+                            <a href="#">
+                                <img src="../images/brands/fecomercio.png" alt="">
+                            </a>
+                        </div>
+                        <div class="conheca__carousel-item">
+                            <a href="#">
+                                <img src="../images/brands/fecomercio.png" alt="">
+                            </a>
+                        </div>
+                        <div class="conheca__carousel-item">
+                            <a href="#">
+                                <img src="../images/brands/fecomercio.png" alt="">
+                            </a>
+                        </div>
+                        <div class="conheca__carousel-item">
+                            <a href="#">
+                                <img src="../images/brands/fecomercio.png" alt="">
+                            </a>
+                        </div>
+                        <div class="conheca__carousel-item">
+                            <a href="#">
+                                <img src="../images/brands/fecomercio.png" alt="">
+                            </a>
+                        </div>
+                        <div class="conheca__carousel-item">
+                            <a href="#">
+                                <img src="../images/brands/fecomercio.png" alt="">
+                            </a>
+                        </div>
+                        <div class="conheca__carousel-item">
+                            <a href="#">
+                                <img src="../images/brands/fecomercio.png" alt="">
+                            </a>
+                        </div>
+                        <div class="conheca__carousel-item">
+                            <a href="#">
+                                <img src="../images/brands/fecomercio.png" alt="">
+                            </a>
+                        </div>
+                        <div class="conheca__carousel-item">
+                            <a href="#">
+                                <img src="../images/brands/fecomercio.png" alt="">
+                            </a>
+                        </div>
+                        <div class="conheca__carousel-item">
+                            <a href="#">
+                                <img src="../images/brands/fecomercio.png" alt="">
+                            </a>
+                        </div>
+                        <div class="conheca__carousel-item">
+                            <a href="#">
+                                <img src="../images/brands/fecomercio.png" alt="">
+                            </a>
+                        </div>
                         <div class="conheca__carousel-item">
                             <a href="#">
                                 <img src="../images/brands/fecomercio.png" alt="">
                             </a>
                         </div>
                     </div>
-                    <div class="d-flex justify-content-center">
-                        <a href="#" class="btn btn-secondary">
-                            Veja mais associados
-                        </a>
-                        <a href="#" class="btn btn-secondary">
-                            Veja mais parceiros
-                        </a>
+                    <div
+                        class="d-flex justify-content-center flex-column align-items-center flex-md-row wow fadeInUp">
+                        <div>
+                            <a href="#" class="btn btn-csecondary py-2 px-4 mb-2 mb-md-0 mr-md-4">
+                                Veja mais associados
+                            </a>
+                        </div>
+                        <div>
+                            <a href="#" class="btn btn-csecondary py-2 px-4">
+                                Veja mais parceiros
+                            </a>
+                        </div>
                     </div>
                 </div>
             </section>
 
             <section id="pontos-coleta" class="pontos-coleta">
                 <div class="container">
-                    <div class="col-lg-6">
-                        <div class="pontos-coleta__caption">
-                            <h3 class="inner-title">Pontos de coleta</h3>
-                            <p class="inner-desc">
-                                Localize o ponto de coleta mais próximo de você. Somos centenas de associados,
-                                de todos os portes, fazendo a diferença no sistema.
-                            </p>
+                    <div class="row">
+                        <div class="col-lg-6">
+                            <div class="pontos-coleta__caption">
+                                <h3 class="inner-title wow fadeInUp">Pontos de coleta</h3>
+                                <p class="inner-desc wow fadeInUp" data-wow-delay="0.4s">
+                                    Localize o ponto de coleta mais próximo de você. Somos centenas de associados,
+                                    de todos os portes, fazendo a diferença no sistema.
+                                </p>
+                                <a href="#" class="btn btn-cprimary px-4 mt-3 mt-lg-4 wow fadeIn" data-wow-delay="0.6s">Buscar</a>
+                            </div>
                         </div>
-                    </div>
-                    <div class="col-lg-6">
-                        <div class="pontos-coleta__map">
-                            <img src="../images/backgrounds/banner-mapa.png" alt="">
-                            <div class="pontos-coleta__map-desc">
-                                <b>
-                                    Atuação dos órgãos ambientais:
-                                </b>
+                        <div class="col-lg-6">
+                            <div class="pontos-coleta__map">
+                                <img class=" wow fadeInRight" data-wow-delay="0.2s" src="../images/backgrounds/banner-mapa.png" alt="">
+                                <div class="pontos-coleta__map-desc wow fadeInDown" data-wow-delay="0.6s">
+                                    <b>
+                                        Atuação dos órgãos ambientais:
+                                    </b>
+                                    <ul>
+                                        <li>
+                                            <label for="#" class="green1"></label>
+                                            <div>
+                                                <b>Verde claro:</b>
+                                                Acordo setorial
+                                            </div>
+                                        </li>
+                                        <li>
+                                            <label for="#" class="green1"></label>
+                                            <div>
+                                                <b>Verde escuro:</b>
+                                                <br/>Ac. Setorial + Termos de compromisso
+                                            </div>
+                                        </li>
+                                    </ul>
+                                </div>
                             </div>
                         </div>
                     </div>
