--- a/pages/index.html
+++ b/pages/index.html
@@ -257,7 +257,7 @@
 
                     <div class="row">
                         <div class="col-md-3 d-flex justify-content-center">
-                            <div class="conheca__item wow fadeInUp">
+                            <div class="conheca__item wow fadeIn" data-wow-delay="0.2s">
                                 <div class="conheca__item-icon">
                                     <img src="../images/ico/comerciante.png" alt="">
                                 </div>
@@ -272,7 +272,7 @@
                             </div>
                         </div>
                         <div class="col-md-3 d-flex justify-content-center">
-                            <div class="conheca__item wow fadeInUp">
+                            <div class="conheca__item wow fadeIn" data-wow-delay="0.3s">
                                 <div class="conheca__item-icon">
                                     <img src="../images/ico/distruibudor.png" alt="">
                                 </div>
@@ -287,7 +287,7 @@
                             </div>
                         </div>
                         <div class="col-md-3 d-flex justify-content-center">
-                            <div class="conheca__item wow fadeInUp">
+                            <div class="conheca__item wow fadeIn" data-wow-delay="0.4s">
                                 <div class="conheca__item-icon">
                                     <img src="../images/ico/fabricante.png" alt="">
                                 </div>
@@ -302,7 +302,7 @@
                             </div>
                         </div>
                         <div class="col-md-3 d-flex justify-content-center">
-                            <div class="conheca__item wow fadeInUp">
+                            <div class="conheca__item wow fadeIn" data-wow-delay="0.5s">
                                 <div class="conheca__item-icon">
                                     <img src="../images/ico/reciclador.png" alt="">
                                 </div>
@@ -313,10 +313,10 @@
                         </div>
                     </div>
 
-                    <h4 class="conheca__carousel-title wow fadeInUp">
+                    <h4 class="conheca__carousel-title wow fadeIn" data-wow-delay="0.3s">
                         Associados e parceiros
                     </h4>
-                    <div class="conheca__carousel owl-carousel owl-default wow fadeInUp">
+                    <div class="conheca__carousel owl-carousel owl-default wow fadeIn">
                         <div class="conheca__carousel-item">
                             <a href="#">
                                 <img src="../images/brands/fecomercio.png" alt="">
@@ -409,12 +409,19 @@
                                     Localize o ponto de coleta mais próximo de você. Somos centenas de associados,
                                     de todos os portes, fazendo a diferença no sistema.
                                 </p>
-                                <a href="#" class="btn btn-cprimary px-4 mt-3 mt-lg-4 wow fadeIn" data-wow-delay="0.6s">Buscar</a>
+                                <a
+                                    href="#"
+                                    class="btn btn-cprimary px-4 mt-3 mt-lg-4 wow fadeIn"
+                                    data-wow-delay="0.6s">Buscar</a>
                             </div>
                         </div>
                         <div class="col-lg-6">
                             <div class="pontos-coleta__map">
-                                <img class=" wow fadeInRight" data-wow-delay="0.2s" src="../images/backgrounds/banner-mapa.png" alt="">
+                                <img
+                                    class=" wow fadeInRight"
+                                    data-wow-delay="0.2s"
+                                    src="../images/backgrounds/banner-mapa.png"
+                                    alt="">
                                 <div class="pontos-coleta__map-desc wow fadeInDown" data-wow-delay="0.6s">
                                     <b>
                                         Atuação dos órgãos ambientais:
@@ -444,17 +451,17 @@
 
             <section id="ultimas-noticias" class="ultimas-noticias">
                 <div class="container">
-                    <div class="ultimas-noticias__header">
+                    <div class="ultimas-noticias__header wow fadeInUp">
                         <h3 class="inner-title">
                             Últimas notícias
                         </h3>
-                        <a href="#" class="btn-primary">Ver mais notícias</a>
+                        <a href="#" class="btn-cprimary d-none d-lg-block">Ver mais notícias</a>
                     </div>
-                    <div class="row">
-                        <div class="col-lg-3">
-                            <article class="noticia">
+                    <div class="row position-relative">
+                        <div class="col-md-6 col-xl-3">
+                            <article class="noticia mb-4 mb-xl-0 wow fadeIn" data-wow-delay="0.1s">
                                 <div class="noticia__img">
-                                    <img src="#" alt="#">
+                                    <img src="../images/backgrounds/" alt="#">
                                 </div>
                                 <div class="noticia__caption">
                                     <span class="category">
@@ -470,12 +477,12 @@
                                         Maecenas auctor nisi at tellus lobortis, dapibus pretium nunc egesta aliquam est
                                         purus, rhoncus a utpat.
                                     </p>
-                                    <a href="#" class="btn-primary">Leia mais</a>
+                                    <a href="#" class="btn">Leia mais</a>
                                 </div>
                             </article>
                         </div>
-                        <div class="col-lg-3">
-                            <article class="noticia">
+                        <div class="col-md-6 col-xl-3">
+                            <article class="noticia mb-4 mb-xl-0 wow fadeIn" data-wow-delay="0.2s">
                                 <div class="noticia__img">
                                     <img src="#" alt="#">
                                 </div>
@@ -493,12 +500,12 @@
                                         Maecenas auctor nisi at tellus lobortis, dapibus pretium nunc egesta aliquam est
                                         purus, rhoncus a utpat.
                                     </p>
-                                    <a href="#" class="btn-primary">Leia mais</a>
+                                    <a href="#" class="btn">Leia mais</a>
                                 </div>
                             </article>
                         </div>
-                        <div class="col-lg-3">
-                            <article class="noticia">
+                        <div class="col-md-6 col-xl-3">
+                            <article class="noticia mb-4 mb-xl-0 wow fadeIn" data-wow-delay="0.3s">
                                 <div class="noticia__img">
                                     <img src="#" alt="#">
                                 </div>
@@ -516,12 +523,12 @@
                                         Maecenas auctor nisi at tellus lobortis, dapibus pretium nunc egesta aliquam est
                                         purus, rhoncus a utpat.
                                     </p>
-                                    <a href="#" class="btn-primary">Leia mais</a>
+                                    <a href="#" class="btn">Leia mais</a>
                                 </div>
                             </article>
                         </div>
-                        <div class="col-lg-3">
-                            <article class="noticia">
+                        <div class="col-md-6 col-xl-3">
+                            <article class="noticia mb-4 mb-xl-0 wow fadeIn" data-wow-delay="0.4s">
                                 <div class="noticia__img">
                                     <img src="#" alt="#">
                                 </div>
@@ -539,19 +546,25 @@
                                         Maecenas auctor nisi at tellus lobortis, dapibus pretium nunc egesta aliquam est
                                         purus, rhoncus a utpat.
                                     </p>
-                                    <a href="#" class="btn-primary">Leia mais</a>
+                                    <a href="#" class="btn">Leia mais</a>
                                 </div>
                             </article>
+                        </div>
+                    </div>
+
+                    <div class="d-flex d-lg-none pt-4 justify-content-center">
+                        <div>
+                            <a href="#" class="btn-cprimary d-block d-lg-none wow fadeInUp">Ver mais notícias</a>
                         </div>
                     </div>
                 </div>
             </section>
 
-            <section id="banner-planeta" class="banner-planeta">
+            <section id="banner-caixa" class="banner-caixa">
                 <div class="container">
                     <div class="row">
                         <div class="col-lg-6">
-                            <div class="banner-planeta__caption">
+                            <div class="banner-caixa__caption">
                                 <h3 class="inner-title">
                                     O que acontece quando me associo ao IBER?
                                 </h3>
@@ -566,17 +579,17 @@
                         <div class="col-lg-6"></div>
                     </div>
 
-                    <h3 class="banner-planeta__depoimentos-title">
+                    <h3 class="banner-caixa__depoimentos-title">
                         Depoimentos
                     </h3>
-                    <div class="banner-planeta__carousel owl-carousel owl-default">
-                        <div class="banner-planeta__item">
+                    <div class="banner-caixa__carousel owl-carousel owl-default">
+                        <div class="banner-caixa__item">
                             <div class="banner-planetea__item-desc">
                                 Sed nulla tellus, congue in semper egestas, tristique sed dui. Ut non nisi sit
                                 amet mi laoreet porttitor sed non ipsum. Donec bibendum vehicula lectus, eu
                                 finibus orci.
                             </div>
-                            <div class="banner-planeta__item-footer">
+                            <div class="banner-caixa__item-footer">
                                 <img src="../images/backgrounds/bg-predios.png" alt="#">
                                 <span class="name">
                                     Antonia W Pitts
@@ -585,7 +598,7 @@
                                     Marketing / Fecomércio
                                 </span>
                             </div>
-                        </div>Iber2020
+                        </div>
 
                     </div>
                 </div>
@@ -596,7 +609,7 @@
         <footer class="footer">
     <div class="container">
         <div class="row">
-            <div class="col-md-6 col-lg-2">
+            <div class="col-6 col-md-3 col-lg-2 wow fadeIn order-2 order-md-first">
                 <ul class="footer__links">
                     <li class="title">
                         O IBER
@@ -605,16 +618,24 @@
                         <a href="#">
                             Diretoria
                         </a>
+
+                    </li>
+
+                    <li>
+
                         <a href="#">
                             Estrutura
                         </a>
+                    </li>
+
+                    <li>
                         <a href="#">
                             Onde Atuamos
                         </a>
                     </li>
                 </ul>
             </div>
-            <div class="col-md-6 col-lg-2">
+            <div class="col-6 col-md-3 col-lg-2 mb-lg-0  wow fadeIn">
                 <ul class="footer__links">
                     <li class="title">
                         Serviços
@@ -651,9 +672,9 @@
                     </li>
                 </ul>
             </div>
-            <div class="col-md-6 col-lg-2">
+            <div class="col-6 col-md-3 col-lg-2  wow fadeIn order-3">
                 <ul class="footer__links">
-                    <li class="title" style="opacity: 0">
+                    <li class="title d-none d-md-block" style="opacity: 0">
                         .
                     </li>
                     <li>
@@ -688,7 +709,7 @@
                     </li>
                 </ul>
             </div>
-            <div class="col-md-6 col-lg-2">
+            <div class="col-6 col-md-3 col-lg-2  wow fadeIn order-4">
                 <ul class="footer__links">
                     <li class="title">
                         Outros
@@ -725,26 +746,26 @@
                     </li>
                 </ul>
             </div>
-        </div>
+            <div class="col-lg-4 d-flex align-items-center order-last">
+                <div class="footer__right">
+                    <a href="#" class="color-white d-block mb-3 wow fadeInUp">
+                        Validar certificado/selo
+                    </a>
 
-        <div class="col-lg-4">
-            <div class="footer__right">
-                <a href="#" class="text-uppercase">
-                    Validar certificado/selo
-                </a>
+                    <a href="#" class="btn-cprimary py-2  d-block mb-3  wow fadeInUp" data-wow-delay="0.2s">
+                        Solicitar a destinação
+                    </a>
+                    <a href="#" class="btn-csecondary py-2  d-block mb-3 wow fadeInUp" data-wow-delay="0.3s">
+                        Área restrita
+                    </a>
 
-                <a href="#" class="btn-primary">
-                    Solicitar a destinação
-                </a>
-                <a href="#" class="btn-secondary">
-                    Área restrita
-                </a>
-
-                <p class="footer__copyright">
-                    © 2010-2019 - IBER Brasil - Todos os direitos reservados
-                </p>
+                    <p class="footer__copyright wow fadeInUp" data-wow-delay="0.2s">
+                        © 2010-2019 - IBER Brasil - Todos os direitos reservados
+                    </p>
+                </div>
             </div>
         </div>
+
     </div>
 </footer>
         <!-- partial -->
