--- a/pages/index.html
+++ b/pages/index.html
@@ -471,7 +471,7 @@
                         <a href="#" class="btn-cprimary d-none d-lg-block">Ver mais notícias</a>
                     </div>
                     <div class="row position-relative">
-                        <div class="col-md-6 col-xl-3">
+                        <div class="col-sm-6 col-xl-3">
                             <article class="noticia mb-4 mb-xl-0 wow fadeIn" data-wow-delay="0.1s">
                                 <div class="noticia__img">
                                     <img src="../images/backgrounds/" alt="#">
@@ -494,7 +494,7 @@
                                 </div>
                             </article>
                         </div>
-                        <div class="col-md-6 col-xl-3">
+                        <div class="col-sm-6 col-xl-3">
                             <article class="noticia mb-4 mb-xl-0 wow fadeIn" data-wow-delay="0.2s">
                                 <div class="noticia__img">
                                     <img src="#" alt="#">
@@ -517,7 +517,7 @@
                                 </div>
                             </article>
                         </div>
-                        <div class="col-md-6 col-xl-3">
+                        <div class="col-sm-6 col-xl-3">
                             <article class="noticia mb-4 mb-xl-0 wow fadeIn" data-wow-delay="0.3s">
                                 <div class="noticia__img">
                                     <img src="#" alt="#">
@@ -540,7 +540,7 @@
                                 </div>
                             </article>
                         </div>
-                        <div class="col-md-6 col-xl-3">
+                        <div class="col-sm-6 col-xl-3">
                             <article class="noticia mb-4 mb-xl-0 wow fadeIn" data-wow-delay="0.4s">
                                 <div class="noticia__img">
                                     <img src="#" alt="#">
