--- a/pages/index.html
+++ b/pages/index.html
@@ -635,7 +635,7 @@
                                 finibus orci.
                             </div>
                             <div class="banner-caixa__item-footer">
-                                <img src="../images/backgrounds/bg-predios.png" alt="#">
+                                <img src="../images/thumbs/womn.jpg" alt="#">
                                 <span class="name">
                                     Antonia W. Pitts
                                 </span>
@@ -652,7 +652,7 @@
                             </div>
                             <div class="banner-caixa__item-footer">
                                 <div>
-                                    <img src="../images/backgrounds/bg-predios.png" alt="#">
+                                    <img src="../images/thumbs/womn.jpg" alt="#">
                                 </div>
                                 <span class="name">
                                     Antonia W. Pitts
@@ -669,7 +669,7 @@
                                 finibus orci.
                             </div>
                             <div class="banner-caixa__item-footer">
-                                <img src="../images/backgrounds/bg-predios.png" alt="#">
+                                <img src="../images/thumbs/womn.jpg" alt="#">
                                 <span class="name">
                                     Antonia W. Pitts
                                 </span>
@@ -685,7 +685,7 @@
                                 finibus orci.
                             </div>
                             <div class="banner-caixa__item-footer">
-                                <img src="../images/backgrounds/bg-predios.png" alt="#">
+                                <img src="../images/thumbs/womn.jpg" alt="#">
                                 <span class="name">
                                     Antonia W. Pitts
                                 </span>
@@ -701,7 +701,7 @@
                                 finibus orci.
                             </div>
                             <div class="banner-caixa__item-footer">
-                                <img src="../images/backgrounds/bg-predios.png" alt="#">
+                                <img src="../images/thumbs/womn.jpg" alt="#">
                                 <span class="name">
                                     Antonia W. Pitts
                                 </span>
