--- a/pages/index.html
+++ b/pages/index.html
@@ -847,7 +847,7 @@
             <div class="col-lg-4 d-flex align-items-center order-last">
                 <div class="footer__right">
                     <a href="#" class="color-white d-block mb-3 wow fadeInUp">
-                        Validar certificado/selo
+                        Validar certificado / Selo
                     </a>
 
                     <a href="#" class="btn-cprimary py-2  d-block mb-3  wow fadeInUp" data-wow-delay="0.2s">
