--- a/pages/index.html
+++ b/pages/index.html
@@ -221,7 +221,7 @@
                     <div class="row">
                         <div class="col-lg-6">
                             <div class="banner-folha__caption wow fadeInUp">
-                                <h3 class="inner-title">O iber</h3>
+                                <h3 class="inner-title">O IBER</h3>
                                 <div class="inner-desc">
                                     <p>
                                         Regulamentado e reconhecido pelos órgãos ambientais , o IBER é o Instituto e a
@@ -233,7 +233,7 @@
                                         empresas na Política Nacional de Resíduos Sólidos (PNRS).
                                     </p>
                                 </div>
-                                <a href="#" class="btn-cprimary">Saiba mais</a>
+                                <a href="#" class="btn-cprimary md">Saiba mais</a>
                             </div>
                         </div>
                     </div>
@@ -846,14 +846,14 @@
             </div>
             <div class="col-lg-4 d-flex align-items-center order-last">
                 <div class="footer__right">
-                    <a href="#" class="color-white d-block mb-3 wow fadeInUp">
+                    <a href="#" class="color-white d-block mb-2 wow fadeInUp">
                         Validar certificado / Selo
                     </a>
 
-                    <a href="#" class="btn-cprimary py-2  d-block mb-3  wow fadeInUp" data-wow-delay="0.2s">
+                    <a href="#" class="btn-cprimary py-2 px-4 d-block mb-2  wow fadeInUp" data-wow-delay="0.2s">
                         Solicitar a destinação
                     </a>
-                    <a href="#" class="btn-csecondary py-2  d-block mb-3 wow fadeInUp" data-wow-delay="0.3s">
+                    <a href="#" class="btn-csecondary py-2 px-4 d-block mb-3 wow fadeInUp" data-wow-delay="0.3s">
                         Área restrita
                     </a>
 
