--- a/pages/index.html
+++ b/pages/index.html
@@ -85,7 +85,7 @@
                 </a>
             </div>
 
-            <p>
+            <p class="mr-lg-4">
                 <i class="fa fa-envelope color-primary"></i>
                 <a href="mailto:atendimento@iber.org.br" class="color-white">atendimento@iber.org.br</a>
             </p>
