--- a/pages/sobre.html
+++ b/pages/sobre.html
@@ -64,6 +64,7 @@
 
     <body class="wow fadeIn">
         <!-- partial:../partials/__navbar-branco.html -->
+        
         <header id="main-header" class="main-header">
     <div class="container container--max">
         <div class="main-header__left">
@@ -85,7 +86,7 @@
                 </a>
             </div>
 
-            <p>
+            <p class="mr-lg-4 pr-lg-1">
                 <i class="fa fa-envelope color-primary"></i>
                 <a href="mailto:atendimento@iber.org.br" class="color-white">atendimento@iber.org.br</a>
             </p>
@@ -189,6 +190,7 @@
     </div>
 
 </nav>
+        
         <!-- partial -->
         <main style="margin-bottom: -6px">
             <section class="interna-sobre">
