--- a/pages/diretoria.html
+++ b/pages/diretoria.html
@@ -194,35 +194,66 @@
         <!-- partial -->
         <main style="margin-bottom: -6px">
             <section class="interna-sobre">
-                <div class="interna-sobre__content">
-                    <div>
+                <div class="interna-sobre__content mb-lg-5">
+                    <div class="mb-5">
                         <div class="interna-sobre__header">
                             <h2 class="subtitle wow fadeInUp">
                                 Conheça o IBER
                             </h2>
                             <h1 class="title wow fadeInUp"  data-wow-delay="0.1s">
-                                Sobre o IBER
+                                Diretoria
                             </h1>
                         </div>
 
-                        <div class="text wow fadeInUp">
+                        <div class="wow fadeInUp mb-3 mb-lg-5">
                             <p>
-                                Ut eu placerat tellus. Duis sit amet nunc vestibulum, volutpat Leo a, tincidunt
-                                odio. Nunc ut iaculis turpis, ut tincidunt nibh. Mauris tincidunt neque
-                                porttitor, rhoncus mi non, volutpat sapien. Fusce et enim eros. Duis gravida
-                                viverra nunc, eget ullamcorper sem faucibus gravida.
-                            </p>
-                            <p>
-                                Ut eu placerat tellus. Duis
-                                sit amet nunc vestibulum, volutpat Leo a, tincidunt odio. Nunc ut iaculis
-                                turpis, ut tincidunt nibh. Mauris tincidunt neque porttitor, rhoncus mi non,
-                                volutpat sapien. Fusce et enim eros. Duis gravida viverra nunc, eget ullamcorper
-                                sem faucibus gravida.
+                                Ut eu placerat tellus. Duis sit amet nunc vestibulum, volutpat Leo a, tincidunt odio. Nunc ut iaculis turpis, ut tincidunt nibh.
                             </p>
                         </div>
-                        <div class="d-flex flex-column flex-lg-row pt-lg-4 wow fadeInUp">
-                            <a href="#" class="btn-csecondary mb-2 mb-lg-0 mr-lg-2">Baixe o estatuto do IBER</a>
-                            <a href="#" class="btn-csecondary">Baixe regimento interno</a>
+                        
+
+                        <div class="text row wow fadeInUp" data-wow-delay="0.2s">
+                            <div class="col-12">
+                                <ul class="mb-2 mb-lg-4">
+                                    <li><b>Diretoria Executiva:</b></li>
+                                    <li>- Amanda Vieira Queiroz Schneider</li>
+                                </ul>
+                            </div>
+                            <div class="col-lg-6">
+                                <ul class="mb-2 mb-lg-4">
+                                    <li><b>Equipe Técnica:</b></li>
+                                    <li>- Mabila Molini</li>
+                                    <li>- Stefanie Germano</li>
+                                </ul>
+                                <ul class="">
+                                    <li><b>Conselho Gestor:</b></li>
+                                    <li>-Alex Oliveira Pacheco</li>
+                                    <li>- Jeisson Igomar Kolln</li>
+                                    <li>- Joaquim Vaz Filho</li>
+                                    <li>- José Carlos Caminha</li>
+                                    <li>- José Carlos Caminha</li>
+                                    <li>- José Carlos Caminha</li>
+                                    <li>- José Carlos Caminha</li>
+                                    <li>- José Carlos Caminha</li>
+                                    <li>- José Carlos Caminha</li>
+                                </ul>
+                            </div>
+                            <div class="col-lg-6">
+                                <ul class="mb-2 mb-lg-4">
+                                    <li><b>Consultores:</b></li>
+                                    <li>- José Antônio de Souza</li>
+                                    <li>- Thiago Lopes de Lima</li>
+                                </ul>
+                                <ul>
+                                    <li><b>Suplentes:</b></li>
+                                    <li>- José Antônio de Souza</li>
+                                    <li>- Thiago Lopes de Lima</li>
+                                    <li>- José Antônio de Souza</li>
+                                    <li>- Thiago Lopes de Lima</li>
+                                    <li>- José Antônio de Souza</li>
+                                    <li>- Thiago Lopes de Lima</li>
+                                </ul>
+                            </div>
                         </div>
                     </div>
                 </div>
